[gd_scene load_steps=4 format=2]

[ext_resource path="res://point.gd" type="Script" id=1]
[ext_resource path="res://sprites/exclaim_marker.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.99, 3.99 )

[node name="point" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0.266667, 0.266667, 1 )
texture = ExtResource( 2 )
[connection signal="area_entered" from="." to="." method="_on_point_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_point_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_point_body_entered"]
